# projet-jeremie

./: Cargo.toml  LICENCE  README.md  package-lock.json
.github/workflows/: build.yml  rust.yml
.husky/: pre-commit
src/: main.rs
src/assets/: Transcription.docx  main.py  toFind.json
src/outputs/: results.txt
