[package]
name = "projet-jeremie"
version = "0.1.0"
edition = "2021"
authors = ["Tom Planche <tomplanche@icloud.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit-distance = "2.1.0"
clap = { version = "4.4.16", features = ["derive"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
